--- a/assets/section-why-duo.css
+++ b/assets/section-why-duo.css
@@ -300,10 +300,6 @@
         padding: 20px 0 0 !important;
     }
 
-    .imagen-info-text{
-        left: 0;
-    }
-
 }
 
 @media (max-width:767px) {
